@@ -1,3 +1,11 @@
+2004-04-18  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #139800
+
+	* providers/freetds/gda-freetds-provider.c (gda_freetds_execute_cmd):
+	* providers/freetds/gda-freetds-recordset.c (gda_freetds_recordset_new):
+	updated to latest FreeTDS 0.62 API.
+
 2004-04-16  Denis Loginov <dloginov@crl.nmsu.edu>
 
 	* providers/postgres/gda-postgres-provider.c (gda_postgres_fill_md_data):
